<resources>
    <string name="app_name">NoteApp</string>

    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="note">Note</string>

    <!-- Login and Register Screen-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_register">Sign Up for Note</string>

    <!-- TOAST -->
    <string name="title_and_content_is_empty">Title and content is empty!</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="invalid_password">Password too short, enter minimum 6 characters!</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="no_network_connection">No network connection</string>

    <!-- Dialog -->
    <string name="title_dialog_delete">Confirm Delete</string>
    <string name="content_dialog_delete">Are you sure you want to delete this note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="title_dialog_logout">Logout</string>
    <string name="content_dialog_logout">Are you sure you want to logout?</string>
    <string name="title_dialog_back_press">Confirm</string>
    <string name="content_dialog_back_press">Do you want to save this note?</string>

</resources>
