<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/header_card_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16">

            <ImageView
                android:id="@+id/back_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:id="@+id/save_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/green"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_below="@+id/header_card_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/progress_bar"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/create_date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical|right"
                android:text="12/07/2017"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_16"
                android:visibility="gone" />

            <EditText
                android:id="@+id/title_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_10"
                android:background="#00000000"
                android:hint="@string/title"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_marginTop="@dimen/sp_16"
                android:background="@color/gray_2" />

            <EditText
                android:id="@+id/content_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:background="#00000000"
                android:hint="@string/note"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>